unpackaged/main/default/objects/nbavs__Insights__c/nbavs__Insights__c.object-meta.xml
<CustomObject>
    <label>Insight</label>
    <nameField>
        <displayFormat>Ins-{00000}</displayFormat>
        <label>Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>