unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Acknowledged_Notes_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Acknowledged_Notes_Count__c</fullName>
    <label>Acknowledged Notes Count</label>
    <summaryFilterItems>
        <field>nbavs__Insight_Note__c.nbavs__Is_Acknowledged__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>nbavs__Insight_Note__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>