unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Answer_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Answer_Time__c</fullName>
    <label>Answer Time</label>
    <type>DateTime</type>
</CustomField>