unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Average_Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Average_Overall_Rating__c</fullName>
    <description>Average of the individual average rating types</description>
    <formula>(nbavs__Average_Rating_1__c + nbavs__Average_Rating_2__c + nbavs__Average_Rating_3__c + nbavs__Average_Rating_4__c )/4</formula>
    <label>Average Overall Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>