unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Average_Rating_1__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Average_Rating_1__c</fullName>
    <description>Average insights rating of Call Quality rating type</description>
    <label>Average Rating 1</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>