unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Average_Rating_3__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Average_Rating_3__c</fullName>
    <description>Average insights rating of Agent Knowledge type</description>
    <label>Average Rating 3</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>