unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Call_Category__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Category__c</fullName>
    <label>Call Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>