unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Direction__c</fullName>
    <label>Call Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>