unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Call_Reporting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Reporting</label>
    <referenceTo>nbavs__CallReporting__c</referenceTo>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>