unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Not connected</fullName>
            </value>
            <value>
                <fullName>Voicemail Record</fullName>
            </value>
            <value>
                <fullName>ListenIn</fullName>
            </value>
            <value>
                <fullName>Fax To Email</fullName>
            </value>
            <value>
                <fullName>Call Return</fullName>
            </value>
            <value>
                <fullName>Voicemail Login</fullName>
            </value>
            <value>
                <fullName>LoginOut Svce</fullName>
            </value>
            <value>
                <fullName>Echo</fullName>
            </value>
            <value>
                <fullName>Echo Delay</fullName>
            </value>
            <value>
                <fullName>Who am I</fullName>
            </value>
            <value>
                <fullName>Group Login</fullName>
            </value>
            <value>
                <fullName>Group Logout</fullName>
            </value>
            <value>
                <fullName>Call Park</fullName>
            </value>
            <value>
                <fullName>Sound Manager</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>