unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Caller_Type__c</fullName>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>