unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__CallReporting_Relationship__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallReporting_Relationship__c</fullName>
    <label>CallReporting Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From</fullName>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>