unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Category_Details__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Category_Details__c</fullName>
    <description>Capture unique category list fired with no of times fired for each category</description>
    <label>Category Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>