unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Category_Fired_By_Date__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Category_Fired_By_Date__c</fullName>
    <description>Rollup summary field to capture most recent date of category linked with the insight</description>
    <label>Category Fired By Date</label>
    <summarizedField>nbavs__Insight_Category__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>nbavs__Insight_Category__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>