unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Channel_Duration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Channel_Duration__c</fullName>
    <label>Channel Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>