unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Channel_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Channel_Duration_Time__c</fullName>
    <formula>IF(FLOOR(nbavs__Channel_Duration__c/3600)&lt; 10, &quot;0&quot;&amp;TEXT(FLOOR(nbavs__Channel_Duration__c/3600)), TEXT(FLOOR(nbavs__Channel_Duration__c/3600)))
&amp;&quot;:&quot; &amp;
IF(FLOOR(MOD(nbavs__Channel_Duration__c,3600)/60)&lt; 10, &quot;0&quot;&amp;TEXT( FLOOR(MOD(nbavs__Channel_Duration__c,3600)/60)), TEXT( FLOOR(MOD(nbavs__Channel_Duration__c,3600)/60)))
&amp;&quot;:&quot; &amp;
IF( MOD(MOD(nbavs__Channel_Duration__c,3600),60)&lt; 10, &quot;0&quot;&amp; TEXT(MOD(MOD(nbavs__Channel_Duration__c,3600),60)), TEXT(MOD(MOD(nbavs__Channel_Duration__c,3600),60)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Duration Time</label>
    <type>Text</type>
</CustomField>