unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Closed_Notes_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Closed_Notes_Count__c</fullName>
    <label>Closed Notes Count</label>
    <summaryFilterItems>
        <field>nbavs__Insight_Note__c.nbavs__Is_Closed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>nbavs__Insight_Note__c.nbavs__Insights__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>