unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Conversation_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Conversation_Count__c</fullName>
    <label>Conversation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>