unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Detected_categories__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Detected_categories__c</fullName>
    <label>Detected categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>