unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Device_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Device_Id__c</fullName>
    <label>Device Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>