unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__End_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>