unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Expected_not_detected_categories__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Expected_not_detected_categories__c</fullName>
    <label>Expected but not detected categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>