unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Insight_Player_Text__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Player_Text__c</fullName>
    <label>Insight Player Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>