unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Insight_Search_Category_fired__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Search_Category_fired__c</fullName>
    <description>This field used to order Insights Search results for a supervisor.
Calls with at least one category has fired - newest to oldest Time*</description>
    <formula>IF( NOT(ISBLANK(nbavs__Category_Fired_By_Date__c)),nbavs__Start_Time__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Search Category fired</label>
    <type>DateTime</type>
</CustomField>