unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Insight_Search_Closed_Notes__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Search_Closed_Notes__c</fullName>
    <description>This field used to order Insights Search results for a basic user.
Calls with closed notes  (newest calls first - Time column)</description>
    <formula>If(NOT(ISBLANK(nbavs__Closed_Notes_Date__c)), nbavs__Start_Time__c,null)</formula>
    <label>Insight Search Closed Notes</label>
    <type>DateTime</type>
</CustomField>