unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Insight_Search_Notes_Opened_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Search_Notes_Opened_Acknowledged__c</fullName>
    <description>This field used to order Insights Search results for a supervisor.
Opened calls with acknowledged notes (tick on green background) - newest to oldest Time*</description>
    <formula>IF(NOT(ISBLANK(nbavs__Opened_Acknowledged_Notes_Date__c)),nbavs__Start_Time__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Search Notes Opened Acknowledged</label>
    <type>DateTime</type>
</CustomField>