unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Insight_Search_Notes_Opened_Unack__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Search_Notes_Opened_Unack__c</fullName>
    <description>This field used to order Insights Search results for a supervisor.
        Opened calls with unacknowledged notes (X on red background) - newest to oldest Time*</description>
    <formula>IF(NOT(ISBLANK(nbavs__Opened_Unacknowledged_Notes_Date__c)), nbavs__Start_Time__c , 
null)</formula>
    <label>Insight Search Notes Opened Unack</label>
    <type>DateTime</type>
</CustomField>