unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Insights_Player__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights_Player__c</fullName>
    <formula>if(nbavs__Insight_Player_Text__c != null,HYPERLINK(nbavs__Insight_Player_Text__c , &quot;Insight Player&quot;,&quot;_blank&quot;),null)</formula>
    <label>Insight Player</label>
    <type>Text</type>
</CustomField>