unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Keywords_Primary__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Keywords_Primary__c</fullName>
    <description>A text field (length to be determined), into which the keywords for the Primary channel will be written, e.g. “Trump,Johnson,Natterbox,Big”.</description>
    <label>Keywords Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>