unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Call_Sentiment_Text__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Call_Sentiment_Text__c</fullName>
    <label>Metric Call Sentiment Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>nbavs__Metric_Sentiments</valueSetName>
    </valueSet>
</CustomField>