unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Change_in_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Change_in_Sentiment__c</fullName>
    <description>A score that subtracts the End-sentiment from the Start-sentiment. The range is -2 to 2 with a -2 for a call that started very positive but ended very negative, 0 for a call that did not change in sentiment and 2 for a call that started very negative but ended very positive.</description>
    <label>Metric Change in Sentiment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>