unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_Average_Streak__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_Average_Streak__c</fullName>
    <description>The average time for all streaks of the other party talking, expressed in seconds. A streak starts with the first word spoken by the party at the beginning of a call or the next word spoken after a pause of 3 seconds or more and ends with a pause of 3 seconds or more or the end of the call.</description>
    <label>Metric Other Average Streak</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>