unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_Average_Talk_Rate__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_Average_Talk_Rate__c</fullName>
    <description>The average rate of speech for the other party over the entire call, with times when the primary party is talking and significant pauses removed, expressed as word per minute (WPM) as an integer from zero to n</description>
    <label>Metric Other Average Talk Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>