unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_End_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_End_Sentiment__c</fullName>
    <description>A score that compares all of the other party’s sentence sentiment values for the last third of the total agent sentences for the transcript. The range is between -1 and 1 with -1 for very negative, 0 for neutral and 1 for very positive.</description>
    <label>Metric Other End Sentiment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>