unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_Intra_Call_Change_Pitch__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_Intra_Call_Change_Pitch__c</fullName>
    <description>A ratio for the intra call change in pitch of the other party where the ratio is calculated by taking the average pitch for the last third of the other party’s words divided by the average pitch of the first third of their words.</description>
    <label>Metric Other Intra Call Change Pitch</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>