unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_IntraCallChange_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_IntraCallChange_Sentiment__c</fullName>
    <description>A score that subtracts the end-sentiment from the start-sentiment. The range is -2 to 2 with a -2 for a call that started very positive but ended very negative, 0 for a call that did not change in sentiment and 2 for a call that started very negative but ended very positive.</description>
    <label>Metric Other IntraCallChange Sentiment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>