unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_Median_Streak__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_Median_Streak__c</fullName>
    <description>The streak talking time value where half the other party talking streaks are below this value and half are above this value</description>
    <label>Metric Other Median Streak</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>