unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_OverTalk_Incidents__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_OverTalk_Incidents__c</fullName>
    <description>The number of times that the other party began talking while the primary party was already talking, expressed as an integer from zero to n.</description>
    <label>Metric Other OverTalk Incidents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>