unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_Relative_Volume_Energy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_Relative_Volume_Energy__c</fullName>
    <description>The measure of how energetically the other party speaks. The metric is the average volume of the other party’s words divided by a fixed average volume of a good party</description>
    <label>Metric Other Relative Volume Energy</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>