unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_Vocabulary__c</fullName>
    <description>Number of unique words spoken by the other party</description>
    <label>Metric Other Vocabulary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>