unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Other_VoiceDynamism_StdDev_Score__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Other_VoiceDynamism_StdDev_Score__c</fullName>
    <description>The measure of the standard deviation for all the other party’s words in a transcription.</description>
    <label>Metric Other VoiceDynamism StdDev Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>