unpackaged/main/default/objects/nbavs__Insights__c/fields/nbavs__Metric_Primary_Intra_Call_Change_Volume__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Metric_Primary_Intra_Call_Change_Volume__c</fullName>
    <description>A ratio for the intra call change in volume of the primary party where the ratio is calculated by taking the average volume for the last third of their words divided by the average volume of the first third of their words.</description>
    <label>Metric Primary Intra Call Change Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>